// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerField Component DatePickerField renders 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field input-date-picker-field"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input"
            name="name"
            placeholder="MMM DD, YYYY"
            type="text"
            value=""
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field input-date-picker-field"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input field-highlighted"
            disabled=""
            name="name"
            placeholder="MMM DD, YYYY"
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values in readonly 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field input-date-picker-field"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input-read-only"
            name="name"
            placeholder="-"
            readonly=""
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`DatePickerField Component DatePickerField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="gds-field-group field-inline"
  >
    <div
      class="field input-date-picker-field field-input-size-6"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-date-picker-input input-error"
            name="name"
            placeholder="MMM DD, YYYY"
            type="text"
            value="Mar 02, 2022"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;
